[gd_scene load_steps=3 format=3 uid="uid://game_hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/game_hud.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.4)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopPanel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBox" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LevelLabel" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LEVEL: 1"

[node name="ScoreLabel" type="Label" parent="TopPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SCORE: 0"

[node name="SidePanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 180.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2
alignment = 1

[node name="EnemyCountLabel" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
text = "ENEMIES: 0"

[node name="CrewLabel" type="Label" parent="SidePanel/VBox"]
layout_mode = 2
text = "CREW: 4 / 4"
